--- a/solivros/pom.xml
+++ b/solivros/pom.xml
@@ -37,6 +37,12 @@
 			<version>8.0.30</version>
     	</dependency>
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
